Fix nav text wrap

--- a/src/components/Map.module.scss
+++ b/src/components/Map.module.scss
@@ -3,7 +3,7 @@
     height: 75vh !important;
     margin-top: -15vh;
     overflow: hidden;
-    .current-address {
+    .address {
       margin-top: 15vh;
     }
   }
